Style some components Fix collapsing container animation bug Fix collapsing container overflow bug

--- a/client/src/components/utilities/CollapsibleContainer/CollapsibleContainer.module.scss
+++ b/client/src/components/utilities/CollapsibleContainer/CollapsibleContainer.module.scss
@@ -3,5 +3,5 @@
 .container {
   border-top: $base-border;
   border-bottom: $base-border;
-  padding: 10px 0 10px 0;
+  //padding: 10px 0 10px 0;
 }
