--- a/client/src/components/utilities/MiniPagesContainer/MiniPageContainer.module.scss
+++ b/client/src/components/utilities/MiniPagesContainer/MiniPageContainer.module.scss
@@ -13,7 +13,7 @@
 
 @media (min-width: $tablet-breakpoint) {
   .container {
-    width: 360px;
+    width: 400px;
     height: 100%;
     right: 0;
     top: 0;
