--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -58,7 +58,7 @@ body {
     display: flex;
     align-items: center;
     gap: $base-gap;
-    justify-content: space-between;
+    //justify-content: space-between;
 }
 
 .Stack-Container {
