--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -45,7 +45,7 @@ $theme: 'light';
 $base-padding: 6px 12px;
 $symmetrical-padding: 10px 10px;
 $base-margin: 0.75rem;
-$base-gap: 14px;
+$base-gap: 20px;
 
 $padding-symmetrical-m: 10px;
 
